[metadata]
name = pyshowdown
version = 0.0.2
author = Scott Maxwell
author_email = scott@scotteh.me
description = A client for the Pokémon Showdown! battle simulator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScottehMax/pyshowdown
project_urls =
    Bug Tracker = https://github.com/ScottehMax/pyshowdown/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    aiohttp

[options.packages.find]
where = src