[metadata]
name = pyshowdown
version = 0.1.3
author = Scott Maxwell
author_email = scott@scotteh.me
description = A client library for the Pokémon Showdown! battle simulator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScottehMax/pyshowdown
project_urls =
    Bug Tracker = https://github.com/ScottehMax/pyshowdown/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include-package-data = True

install_requires =
    aiohttp

[options.package_data]
pyshowdown = py.typed

[options.packages.find]
where = src